--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,10 +18,29 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+common = { path = "lib/common" }
+tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-opener = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tokio = { version = "1" }
+chrono = "0.4.39"
+anyhow = "1.0.98"
+rbatis = { version = "4.7", features = ["debug_mode"] }
+rbs = { version = "4.7" }
+rbdc-sqlite = { version = "^4.7" }
+rbdc-pool-fast = "4.7"
+fastdate = "0.3.36"
+log = "0.4.29"
+env_logger = "0.11.8"
+ansi_term = "0.12.1"
+derive_builder = "0.20"
+strum = "0.27"
+strum_macros = "0.27"
+semver = "1"
+fs_extra = "1.3"
 
+[workspace]
+members = ["lib/common"]
