--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,9 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 common = { path = "lib/common" }
-tauri = { version = "2", features = ["protocol-asset"] }
+asr = { path = "lib/asr" }
+updater = { path = "lib/updater" }
+tauri = { version = "2", features = ["protocol-asset", "devtools"] }
 tauri-plugin-opener = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
@@ -27,7 +29,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1" }
 chrono = "0.4.39"
-anyhow = "1.0.98"
+anyhow = "1.0"
 rbatis = { version = "4.7", features = ["debug_mode"] }
 rbs = { version = "4.7" }
 rbdc-sqlite = { version = "^4.7" }
@@ -43,4 +45,5 @@ semver = "1"
 fs_extra = "1.3"
 
 [workspace]
-members = ["lib/common"]
+members = ["lib/asr", "lib/common", "lib/updater"]
+
