--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.10.4",
     "fast-glob": "^3.3.3",
     "font-list": "^2.0.2",
+    "html2canvas": "^1.4.1",
     "pubsub-js": "^1.9.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
