--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,6 +44,9 @@ strum_macros = "0.27"
 semver = "1"
 fs_extra = "1.3"
 
+[features]
+cuda = ["asr/cuda"]
+
 [workspace]
 members = ["lib/asr", "lib/common", "lib/updater"]
 
