--- a/src-tauri/lib/asr/Cargo.toml
+++ b/src-tauri/lib/asr/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-aha = { version = "0.2.0", features = ["cuda"] }
+aha = { version = "0.2.0" }
 anyhow = "1.0"
 aha_openai_dive = "1.4.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 candle-core = "=0.9.1"
+
+[features]
+cuda = ["aha/cuda"]
