--- a/src-tauri/lib/asr/Cargo.toml
+++ b/src-tauri/lib/asr/Cargo.toml
@@ -10,6 +10,7 @@ aha_openai_dive = "1.4.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 candle-core = "=0.9.1"
+log = "0.4"
 
 [features]
 cuda = ["aha/cuda"]
